syntax = "proto3";
package ethermint.feemarket.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/tharsis/ethermint/x/feemarket/types";

// Params defines the EVM module parameters
message Params {
  option (gogoproto.goproto_stringer) = false;

  // no base fee forces the EIP-1559 base fee to 0 (needed for 0 price calls)
  bool no_base_fee = 1 [ (gogoproto.moretags) = "yaml:\"no_base_fee\"" ];
}